test/TestPhases/typechecker/valid/constForImportedTransparent.blc
import tt "../imports/transparenttype"

module exposes c1

const c1: tt.S = {x = true}