test/TestPhases/typechecker/invalid/constForImportedAbstract.blc
import AT "../imports/abstracttype"

module exposes c

const c: AT.S = {x = true}  // This should fail during type checking